Align the cell values correctly

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,3 +3,7 @@
 
 // Bootstrap
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+.table tbody tr td {
+    vertical-align: middle;
+}
